samples/_failures_safe/1761225552_184c15_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_46750874.c: In function ‘main’:
./samples/SAFE/__tmp_46750874.c:155:17: error: expected expression at end of input
  155 |                 if (
      |                 ^~
./samples/SAFE/__tmp_46750874.c:155:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_46750874.c:155:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_46750874.c:155:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_46750874.c:155:17: error: expected declaration or statement at end of input
